test/Runner/errors/tests/MI/Hook/Hook2.init.js
eve("Suite", () => {
	beforeSeed(() => {}, { timeout: "foo" });
});
